# kube-rs-ctrl

./: .gitignore  .lefthook.yml  .sops.yaml  Cargo.toml  Dockerfile  Makefile  NOTES.md  README.md  TODO.md  argo.md  skaffold.yaml
.devcontainer/: Dockerfile  devcontainer.json
certs/: gen_pki_nginx  generate_test_certs
docker/: .env  compose-llm.yaml  compose-otel.yaml  compose-scylla.yaml  compose.yaml  loki.yaml  otel-collector-config.yaml  prometheus.yaml
docker/certs/: http-cert  http-key  key-920d1f5a-826f-4b2d-9831-1e842db9043b.xml
docker/grafana/: grafana-datasources.yaml
docker/provisioning/: dashboard.yaml  datasource.yaml
docker/scripts/: db_init.sql
docker/scylla/: README.md  docker-compose-cluster-01.yaml  docker-compose-cluster-02.yaml  docker-compose-cluster-03.yaml  docker-compose.yaml  mutant-data.txt  profile.yaml  schema.cql
go-ko/: go.mod
go-ko/cmd/: main.go
go-ko/pkg/client/: valkey.go
infra/: Dockerfile  README.md  dagger.json  go.mod  go.sum  main.go
infra/ci/: TODO.md  go.mod  main.go  terraform.go
infra/config/: deploy.yaml  main.go  nginx.conf
infra/tanka/: jsonnetfile.lock.json
kubernetes/: 01-namespace.yaml  02-cert.yaml  03-scylla.yaml  11-prometheus.yaml  12-grafana.yaml  13-open-telemetry-collector.yaml  99-ingress.yaml  rust-ctrl-deploy.yaml  rust-ctrl-hpa.yaml  rust-ctrl-rbac.yaml  rust-ctrl-srv.yaml
kubernetes/argo-flow/: 01.yaml
scripts/: 01-install-kind.sh
src/: main.rs
terraform/: .terraform.lock.hcl  README.md  charts.tf  config  main.tf  terraform.tfstate  terraform.tfstate.enc  tfplan  vars.tf
(+13 files in other folders)
