[package]
name = "msdk-custom-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = "0.14"
hyper-tls = "0.5.0"
k8s-openapi = { version = "0.18", features = ["v1_26"] }
kube = { version = "0.83", features = ["runtime", "derive", "client", "ws", "admission", "gzip"]}
reqwest = "0.11.27"
serde = "1"
serde_json = "1"
tokio =  { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true }
