[package]
name = "k8s-custom-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = "1.4"
hyper-tls = "0.6.0"
k8s-openapi = { version = "0.23.0", features = ["v1_30"] }
kube = { version = "0.95", features = [
  "runtime",
  "derive",
  "client",
  "ws",
  "admission",
  "gzip",
] }
reqwest = "0.12.7"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true }
